<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">

        <TextView
            android:id="@+id/txt_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:textSize="24sp"/>

        <ImageView
            android:id="@+id/img_poster"
            android:layout_below="@+id/txt_detail"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/sleep_call_poster"/>

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/img_poster"
            android:layout_below="@+id/txt_detail"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/film_title"/>

        <TextView
            android:id="@+id/txt_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/img_poster"
            android:layout_below="@+id/txt_title"
            android:text="@string/film_rate"
            android:textSize="16sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/txt_sinopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_poster"
            android:text="@string/film_sinopsis"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/txt_data_sinopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_sinopsis"
            android:layout_margin="8dp"
            android:textSize="14sp"
            android:text="Penagih utang tapi juga terlilit utang, Dina (Laura Basuki), terjebak dalam hidup yang keras dan kesepian. Sleep call jadi pelarian, agar kerasnya teror pinjol bisa terobati oleh hangatnya sleep call-an tiap malam dengan Rama (Bio One), pria yang ia kenal dari dating apps."
            />

        <Button
            android:id="@+id/btn_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_data_sinopsis"
            android:text="@string/share"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />

    </RelativeLayout>

</ScrollView>